# universal_clipboard

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REVIEW_PR1.md  flake.nix
.beads/: .gitignore  metadata.json
.github/workflows/: android.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: tech-spec-android-disconnect-reconnect-ux.md  tech-spec-macos-to-android-clipboard.md
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/universalclipboard/: MainActivity.kt
android/app/src/main/java/com/example/universalclipboard/crypto/: IdentityManager.kt  KeyPairData.kt  NoiseHandshake.kt
android/app/src/main/java/com/example/universalclipboard/data/: ClipboardItem.kt
android/app/src/main/java/com/example/universalclipboard/network/: ConnectionManager.kt  DeviceDiscovery.kt  NoiseTransport.kt  Protocol.kt
android/app/src/main/java/com/example/universalclipboard/service/: ClipboardSyncService.kt
android/app/src/main/java/com/example/universalclipboard/ui/: MainViewModel.kt
android/app/src/main/java/com/example/universalclipboard/ui/screens/: MainScreen.kt
android/app/src/main/java/com/southernstorm/noise/protocol/: HandshakeState.java  Pattern.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/com/example/universalclipboard/crypto/: KeyPairDataTest.kt  NoiseHandshakeTest.kt  PairedDeviceSerializationTest.kt  PairedDeviceTest.kt
android/app/src/test/java/com/example/universalclipboard/data/: ClipboardItemTest.kt
android/app/src/test/java/com/example/universalclipboard/network/: ConnectionManagerTest.kt  ProtocolTest.kt
android/app/src/test/java/com/example/universalclipboard/service/: ClipboardSyncServiceTest.kt
android/app/src/test/java/com/southernstorm/noise/protocol/: XXpsk0PatternTest.kt
macos/: Cargo.toml
macos/app/: Cargo.toml  tauri.conf.json
macos/app/capabilities/: default.json
macos/app/src/: commands.rs  main.rs
macos/app/ui/: index.html  main.js  style.css
macos/cli/: Cargo.toml
macos/cli/src/: main.rs
macos/core/: Cargo.toml
macos/core/src/: clipboard.rs  events.rs  lib.rs  protocol.rs  server.rs
macos/src/: crypto.rs  discovery.rs  main.rs  protocol.rs  server.rs  storage.rs
protocol/: PROTOCOL.md
scripts/: release.sh
(+1 files in other folders)
