[package]
name = "uclip-app"
version = "0.4.0"
edition = "2021"
description = "Universal Clipboard - macOS menu bar app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uclip-core = { path = "../core" }

tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
