[package]
name = "uclip-core"
version = "0.5.0"
edition = "2021"
description = "Universal Clipboard core library"

[dependencies]
# Noise Protocol Framework
snow = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# mDNS/DNS-SD discovery
mdns-sd = "0.11"

# Clipboard access
arboard = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Key storage
directories = "5"

# Crypto utilities (HKDF, random)
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
